// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[containers] <Document /> renders correctly when NODE_ENV=development 1`] = `
Array [
  <link
    as="script"
    href="/assetPrefix/_next/static/buildId/pages/index.js"
    rel="preload"
  />,
  <link
    as="script"
    href="/assetPrefix/_next/static/buildId/pages/_app.js"
    rel="preload"
  />,
  <link
    as="script"
    href="/assetPrefix/_next/static/buildId/pages/_error.js"
    rel="preload"
  />,
  null,
  null,
  null,
  <meta
    charset="UTF-8"
  />,
  <meta
    content="width=device-width, initial-scale=1.0, maximum-scale=5.0"
    name="viewport"
  />,
  <meta
    content="278225392903510"
    property="fb:app_id"
  />,
  <meta
    content="218519344943411"
    property="fb:page_id"
  />,
  <meta
    content="#160f20"
    name="theme-color"
  />,
  <meta
    content="#160f20"
    name="msapplication-TileColor"
  />,
  <meta
    content="/static/favicon/mstile-150x150.png"
    name="msapplication-TileImage"
  />,
  <link
    href="/static/favicon/favicon.ico"
    rel="icon"
  />,
  <link
    href="/static/favicon/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="/static/favicon/apple-touch-icon-152x152.png"
    rel="apple-touch-icon"
    sizes="152x152"
  />,
  <link
    href="/static/favicon/apple-touch-icon-144x144.png"
    rel="apple-touch-icon"
    sizes="144x144"
  />,
  <link
    href="/static/favicon/apple-touch-icon-120x120.png"
    rel="apple-touch-icon"
    sizes="120x120"
  />,
  <link
    href="/static/favicon/apple-touch-icon-114x114.png"
    rel="apple-touch-icon"
    sizes="114x114"
  />,
  <link
    href="/static/favicon/apple-touch-icon-76x76.png"
    rel="apple-touch-icon"
    sizes="76x76"
  />,
  <link
    href="/static/favicon/apple-touch-icon-72x72.png"
    rel="apple-touch-icon"
    sizes="72x72"
  />,
  <link
    href="/static/favicon/apple-touch-icon-60x60.png"
    rel="apple-touch-icon"
    sizes="60x60"
  />,
  <link
    href="/static/favicon/apple-touch-icon-57x57.png"
    rel="apple-touch-icon"
    sizes="57x57"
  />,
  <link
    href="/static/favicon/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="/static/favicon/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    color="#160f20"
    href="/static/favicon/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="/static/manifest.json"
    rel="manifest"
  />,
  null,
  <noscript>
    &lt;iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TJZ52XC&amp;gtm_auth=5N0VfAOq-iEoyMOidFx0kQ&amp;gtm_preview=env-3&amp;gtm_cookies_win=x" height="0" width="0" style="display:none;visibility:hidden"&gt;&lt;/iframe&gt;
  </noscript>,
  <div
    id="__next"
  />,
  null,
  null,
  null,
  null,
]
`;

exports[`[containers] <Document /> renders currectly when NODE_ENV=production 1`] = `
Array [
  <link
    as="script"
    href="/assetPrefix/_next/static/buildId/pages/index.js"
    rel="preload"
  />,
  <link
    as="script"
    href="/assetPrefix/_next/static/buildId/pages/_app.js"
    rel="preload"
  />,
  <link
    as="script"
    href="/assetPrefix/_next/static/buildId/pages/_error.js"
    rel="preload"
  />,
  null,
  null,
  null,
  <meta
    charset="UTF-8"
  />,
  <meta
    content="width=device-width, initial-scale=1.0, maximum-scale=5.0"
    name="viewport"
  />,
  <meta
    content="278225392903510"
    property="fb:app_id"
  />,
  <meta
    content="218519344943411"
    property="fb:page_id"
  />,
  <meta
    content="#160f20"
    name="theme-color"
  />,
  <meta
    content="#160f20"
    name="msapplication-TileColor"
  />,
  <meta
    content="/static/favicon/mstile-150x150.png"
    name="msapplication-TileImage"
  />,
  <link
    href="/static/favicon/favicon.ico"
    rel="icon"
  />,
  <link
    href="/static/favicon/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />,
  <link
    href="/static/favicon/apple-touch-icon-152x152.png"
    rel="apple-touch-icon"
    sizes="152x152"
  />,
  <link
    href="/static/favicon/apple-touch-icon-144x144.png"
    rel="apple-touch-icon"
    sizes="144x144"
  />,
  <link
    href="/static/favicon/apple-touch-icon-120x120.png"
    rel="apple-touch-icon"
    sizes="120x120"
  />,
  <link
    href="/static/favicon/apple-touch-icon-114x114.png"
    rel="apple-touch-icon"
    sizes="114x114"
  />,
  <link
    href="/static/favicon/apple-touch-icon-76x76.png"
    rel="apple-touch-icon"
    sizes="76x76"
  />,
  <link
    href="/static/favicon/apple-touch-icon-72x72.png"
    rel="apple-touch-icon"
    sizes="72x72"
  />,
  <link
    href="/static/favicon/apple-touch-icon-60x60.png"
    rel="apple-touch-icon"
    sizes="60x60"
  />,
  <link
    href="/static/favicon/apple-touch-icon-57x57.png"
    rel="apple-touch-icon"
    sizes="57x57"
  />,
  <link
    href="/static/favicon/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />,
  <link
    href="/static/favicon/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />,
  <link
    color="#160f20"
    href="/static/favicon/safari-pinned-tab.svg"
    rel="mask-icon"
  />,
  <link
    href="/static/manifest.json"
    rel="manifest"
  />,
  <link
    href="/assets/main.css"
    rel="stylesheet"
  />,
  <noscript>
    &lt;iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TJZ52XC" height="0" width="0" style="display:none;visibility:hidden"&gt;&lt;/iframe&gt;
  </noscript>,
  <div
    id="__next"
  />,
  null,
  null,
  null,
  null,
]
`;
